--- a/Documents/Report/ChromatinArchitecturePostUVCDamage.tex
+++ b/Documents/Report/ChromatinArchitecturePostUVCDamage.tex
@@ -9,10 +9,70 @@
 	
 	\title{Chromatin Architecture Post UVC damage}
 	\maketitle
-	\section{Paper review}
+	\section{Experimental Settings and Findings}
 	\begin{enumerate}
-		\item 
+		\item Cell type used: U20S, which are human osteosarcoma cells;
+		\item H3.3 histones are tagged 48 hours before experiments using the SNAP-tag method, tag color is red;
+		\item Repair factors XFP are labeled with GFP;
+		\item UVC damage is induced in a particular region of the cell;
+		\item Changed to the red fluorescence signal were measured in the entire volume of the cell, post UVC;
+		\item images where acquired using confocal microscopy, with an auto-focus module on, to acquire images from the best focal plane;
+		\item Fluorescence intensity were normalized against values measured in undamaged nucleus;
+		\item Fluorescence loss at irradiated sites was determined by dividing the intensity in the illuminated area by the intensity of the entire nucleus after background subtraction;
+		\item illuminated area was defined 15 minutes post UVC based on GFP labeled repair factors and was kept similar throughout;
+		\item Fluorescent recovery was measured relative to previous illumination starting from the frame with the minimal fluorescent values;
+		\item 2D projection of the 3D images were obtained by \textit{maximal intensity z projection}
+		\item For sensitivity, most of the cell H3.3 fluorescence was photo-bleached, aside from the region of UVC illumination;
+		\item 20\% loss of H3.3 signal from the \textit{entire nucleus} was detected after photo-bleaching the fluorescence patch;
+		\item However, using UVC in the fluorescent patch led to 40\% loss of parental H3.3 signal, while no detectable loss was seen in the entire nucleus;		
+		\item The depletion of fluorescence in the center of the damage area, 15 minutes post UVC, was accompanied by an increase of density at tits boundary, balancing the loss;
+		\item 20\% loss of DNA signal in the damage region, accompanied by an expansion of the region was observed 15 minutes postUVC;
+		\item The expansion of the damage region depends on the dose of repair-factor;		
+		\item The early repair factor DDB2 recruits histone chaperons HIRA, which promotes the deposition of newly synthesized histones at UVC sites;
+		\item newly synthesized histones are detectable in the repair region only 45 minutes post UVC;
+		\item Histone chaperons do not participate in histone redestribution after UVC irradiation;
+		
 	\end{enumerate}
+	
+	\section{Simulation Setting}
+	
+	\subsection{The chromatin}
+     The chromatin is modeled as a Rouse chain of $N$ monomers. The dynamics of the chain is governed by 3 forces: thermal fluctuations, spring force, and bending force 
+     Thermal diffusion fluctuation, resulting from the random collision of the polymer with the particles of its surrounding, and is given by 
+     \begin{equation*}
+     F_d = \sqrt{2D}\dot{w}
+     \end{equation*}
+      with $D$ the diffusion constant, defined by $\frac{k_BT}{\psi}$, $k_B$- the Boltzmann constant, $T$- the absolute temperature in Kelvin, and $\psi$-the friction coefficient.
+      
+     The harmonic potential of springs connecting neighboring monomers is given by
+     \begin{equation*}
+      F_e(t) = -\gamma_e\frac{3k_BT}{2b^2}\sum_{n-1}^{N-1}(R_n(t)-R_{n+1}(t)^2
+     \end{equation*}
+     with $\gamma_e>0$ spring constant, $b$- the standard deviation of the distance between monomers, and $R_n(t)$ is the 3D position of the $n^{th}$ monomer.
+     
+     Bending force on the $n^{th}$ monomer is defined in terms of the angles $\theta_i$ between two adjacent links of the chain, and the opening angle $\theta_0$
+     \begin{equation*}
+     F_b(R_n) = -\gamma_b\frac{3k_BT}{2b^2}\frac{\partial}{\partial R_n}\sum_{i=1}^{N-2}(\cos(\theta_i(t))-\cos(\theta_0))^2
+     \end{equation*}
+     with $\theta_n(t)$ the angle between the chain links formed by monomer $n,n+1,n+2$.
+     The forces acting on the $n^{th}$ monomer at each time is calculated by $\frac{\partial U_b}{\partial R_n}$
+     
+     The differential equation describing of motion of the chain is thus 
+     \begin{equation*}
+     \frac{dR_n}{dt}= \frac{\partial U_b}{\partial R_n} +\frac{\partial U_e}{\partial R_n} +\sqrt{2D} \dot{w}     
+     \end{equation*}
+     
+     \subsection{Parameters}
+     Parameters used in simulations are set proportional to of the quantity $\frac{3K_bT}{b^2}$, which we fix to be one by setting $\frac{3k_BT}{\xi}=D=1, b=\sqrt{3}$ in a medium for which the friction factor $\xi=1$. 
+
+	\subsection{defining the region of interest}
+	Following the article by Polo et al. we define our region of interest (ROI) 15 minutes post UVC. 
+    \subsection{The UV beam}
+    
+	
+	
+	\section{Findings}
+	
 	
 	
 \end{document}
