made a loop to run over number of beads. domain and beam are set relative to the radius of gyration

--- a/Documents/Report/ChromatinArchitecturePostUVCDamage.tex
+++ b/Documents/Report/ChromatinArchitecturePostUVCDamage.tex
@@ -51,7 +51,7 @@
 	UV beam has 3 $\mu m^2$ section, yielding a radius of $r_{uv}=\sqrt{\frac{3}{\pi}}\approx 1 \mu m$. 
 	
     \subsection{Histone Density}
-		We consider histones to be uniformly distributed in the nucleus. There are $3\times 10^6$ histones marked, which makes their density $3\times 10^6 /(4 \pi 7.25^3)\approx 630$ histones/$\mu m^3$
+		We consider histones to be uniformly distributed in the nucleus and in the damage zone. There are $3\times 10^6$ histones marked, which makes their density $3\times 10^6 /(4 \pi 7.25^3)\approx 630$ histones/$\mu m^3$
 		The expected number of histones in the UV beam region is $14.5\pi \times 630\approx 30,000$ histones, assuming the beam is shot through the center of the sphere. 
     
     \subsection{DNA density}
@@ -92,7 +92,7 @@
     \subsubsection{b} 
       we set $b=\sqrt{3} \times 100 nm$, 
     \subsubsection{number of monomers}
-      the number of monomers, $N$, is given by setting the polymer's radius of gyration to covers the ROI. The radius of gyration is given by $\sqrt{N/6}b$, equating it to $3\mu m$ we get $N\approx 1800$ 
+      The number of monomers, $N$, is determined by setting the polymer's radius of gyration to covers the ROI. The radius of gyration is given by $\sqrt{N/6}b$, equating it to $3\mu m$ we get $N\approx 1800$ 
                      
      \subsubsection{the Spring constant}
        We set the spring constant $\gamma_s =1$
