completed the list in the report. There might be a slight change from values in subsequent simulation because the value of b was set to sqrt(3) instead of sqrt(2). A calulation with 3 beads leads to an estimation between the spring and bending constant. several simulation were launched to test the hypothesis that the MSD of beads do not exceed a certain value

--- a/Documents/Report/ChromatinArchitecturePostUVCDamage.tex
+++ b/Documents/Report/ChromatinArchitecturePostUVCDamage.tex
@@ -98,7 +98,12 @@
        We set the spring constant $\gamma_s =1$
      \subsubsection{The bending constant}
        bending constant is defined according to the opening of the chromatin up to 15 minutes post UVC. 
-     
+     \subsubsection{Relationship between force constants}
+      For a prototypical polymer system of 3 beads $R_1,R_2,R_3$ we examine the force on the middle bead $R_2$.
+      The spring force
+      \begin{equation*}
+      F_s(n) = \frac{1}{2}(2R_2-R_1-R_3)
+      \end{equation*}
      
 
 
