--- a/SimulationResults/2Dsimulations_18_06_2015/Summary/SummaryOfFindings19062015.tex
+++ b/SimulationResults/2Dsimulations_18_06_2015/Summary/SummaryOfFindings19062015.tex
@@ -63,18 +63,18 @@ In this subsection we summarize the number and percentages of bead out of the me
 
 \begin{table}[H]
 	\tiny{
- \begin{tabular}{c| l c c c c}
+ \begin{tabular}{c| l l l l l}
  	   &           & & Lost (mean) (\%)[min max]& &  \\
  	 \hline
  	   &           & & bending const multiplier. & &  \\
  	   \hline 
      N 	   &            1 & 2 & 3 & 4& 5 \\   	 
  	 \hline 
- 	 100 & 31 (58\%) [28,38] & 35 (16\%)[-3 17] & 14 (37\%) [11 22] & 36 (61\%)[26 43] & 10 (26\%)[2 26]\\
- 	 200 & 17 (21\%) [2, 30] & 58 (57\%)[49 71]& 54 (56\%)[48 62] & 86 (72\%) [82 92] &33 (45\%)[28 32]\\
- 	 400 & 22 (16\%) [2 39]  & 100 (53\%) [82 106] & 73 (39\%)[60 89]& 92 (\%)[72 100] & 117 (66\%)[74 120] \\
- 	 800 &       &             & & & \\
- 	 1600&       &             & & & \\
+ 	 100 & 31 (58\%) [28,38] & 35 (16\%)[-3 17]    & 14 (37\%) [11 22] & 36 (61\%)[26 43]   & 10 (26\%)[2 26]\\
+ 	 200 & 17 (21\%) [2, 30] & 58 (57\%)[49 71]    & 54 (56\%)[48 62]  & 86 (72\%) [82 92]  & 33 (45\%)[28 32]\\
+ 	 400 & 22 (16\%) [2 39]  & 100 (53\%) [82 106] & 73 (39\%)[60 89]  & 92 (\%)[72 100]    & 117 (66\%)[74 120] \\
+ 	 800 &  0 (0\%) [-20 18] & 0 (0\%) [-39 29]    & 72 (20\%)[4 133]  & 122 (33\%)[29 196] & 120 (31\%)[0 180]\\
+ 	 1600&  0 (0\%)[-23 21]  & 0 (0 \%) [-47 25]   & 54 (9\%)[0 104]   & 43 (3\%)[-17 110]  & 67 (12\%)[0 132]\\
  \end{tabular}
 }
 \end{table}
