--- a/SimulationResults/2Dsimulations_18_06_2015/Summary/SummaryOfFindings19062015.tex
+++ b/SimulationResults/2Dsimulations_18_06_2015/Summary/SummaryOfFindings19062015.tex
@@ -79,4 +79,9 @@ In this subsection we summarize the number and percentages of bead out of the me
 }
 \end{table}
 
+\subsection{Dependence on opening angle}
+For $n=100,200,400,800,1600$, 10 different opening angle were examined ranging from $0$ to $\pi$ in equal increments. 
+
 \end{document}
+
+\subsection{Modeling expansion}
