--- a/Documents/Report/ChromatinArchitecturePostUVCDamage.tex
+++ b/Documents/Report/ChromatinArchitecturePostUVCDamage.tex
@@ -14,24 +14,24 @@
 		\item Cell type used: U20S, which are human osteosarcoma cells;
 		\item H3.3 histones are tagged 48 hours before experiments using the SNAP-tag method, tag color is red;
 		\item Repair factors XFP are labeled with GFP;
-		\item a region of $20 \mu m^2$ was photo-activated 8-10 hours before UVC;
-		\item UVC damage is induced in a region of the cell using a 266 nm laser (0.266 $\mu m$);
+		\item A region of $20 \mu m^2$ was photo-activated 8-10 hours before UVC;
+		\item UVC damage is induced in a region of the cell using a 266 $nm$ laser (0.266 $\mu m$);
 		\item Changed to the red fluorescence signal were measured in the entire volume of the cell, post UVC;
 		\item Images were acquired using confocal microscopy, with an auto-focus module on, to acquire images from the best focal plane;
 		\item Fluorescence intensity were normalized against values measured in undamaged nucleus;
 		\item Fluorescence loss at irradiated sites was determined by dividing the intensity in the illuminated area by the intensity of the entire nucleus after background subtraction;
 		\item Illuminated area was defined 15 minutes post UVC based on GFP labeled repair factors and was kept similar throughout measurements;
 		\item Fluorescent recovery was measured relative to previous illumination starting from the frame with the minimal fluorescent values;
-		\item 2D projection of the 3D images were obtained by \textit{maximal intensity z projection}
-		\item For sensitivity, most of the cell H3.3 fluorescence was photo-bleached, aside from the region of UVC illumination;
+		\item 2D projection of the 3D images were obtained by \textit{maximal intensity z projection};
+		\item To gain sensitivity, most of the cell H3.3 fluorescence was photo-bleached, aside from the region of UVC illumination;
 		\item 20\% loss of H3.3 signal from the \textit{entire nucleus} was detected after photo-bleaching the fluorescence patch;
-		\item However, using UVC in the fluorescent patch led to 40\% loss of parental H3.3 signal, while no detectable loss was seen in the entire nucleus;		
-		\item The depletion of fluorescence in the center of the damage area, 15 minutes post UVC, was accompanied by an increase of density at tits boundary, balancing the loss;
-		\item 20\% loss of DNA signal in the damage region, accompanied by an expansion of the region was observed 15 minutes postUVC;
+		\item However, using UVC in the fluorescent patch led to 40\% loss of parental H3.3 signal, while no detectable loss was seen in the entire nucleus;
+		\item The depletion of fluorescence signal in the center of the damage area, 15 minutes post UVC, was accompanied by an increase of density at its boundaries, balancing the loss;
+		\item 20\% loss of DNA signal in the damage region, accompanied by an expansion of the region was observed 15 minutes post UVC;
 		\item The expansion of the damage region depends on the dose of repair-factor;		
 		\item The early repair factor DDB2 recruits histone chaperons HIRA, which promotes the deposition of newly synthesized histones at UVC sites;
 		\item newly synthesized histones are detectable in the repair region only 45 minutes post UVC;
-		\item Histone chaperons do not participate in histone redestribution after UVC irradiation;
+		\item Histone chaperons do not participate in histone redistribution after UVC irradiation;
 		
 	\end{enumerate}
 	
@@ -48,14 +48,12 @@
 		\end{figure}
 		
 	\subsection{The Simulation Domain}
-	We set our simulation in a spherical domain with reflecting boundaries. This $d$-dimensional spherical domain, $\Omega_d(\rho)$ of radius $\rho$, will represent a region around the damage site, rather than the entire nucleus. 
-	To keep the polymer dense inside this region, we set $\rho=(b\sqrt{N/6})/2$. The actual value of this parameter is yet to be justified. The reflecting boundaries mimic the condensation barrier of the DNa with surrounding chromosomes, unaffected by the UV damage. 
-	
-	In the simulation domain we will place a rectangular region of interest (ROI), in which both DNA and histone densities will be measured, either at the whole region or in concentric bands around the UVC beam's focal point. 
-	
+	We set our simulation in a spherical domain with reflecting boundaries. This $d$-dimensional sphere, $\Omega_d(\rho)$ of radius $\rho$, will represent a region around the damage site, rather than the entire nucleus. 
+	To keep the polymer dense inside this region, we set $\rho=(b\sqrt{N/6})/2$. The actual value of this parameter is yet to be justified. The reflecting boundaries mimic the condensation barrier of the DNA with surrounding chromosomal chain, unaffected by the UV damage. 
+		
 	\subsection{The UV beam}
 	UV beam has 3 $\mu m^2$ section, yielding a radius of $r_{uv}=\sqrt{\frac{3}{\pi}}\approx 1 \mu m$. 
-	In simulations we set the beam radius to be proportional to the radius of gyration, such that the simulation domain is 3 times the radius of the UVC beam. We therefore set the UVC beam radius, $\rho_B$, to be  
+	In simulations we set the beam radius to be proportional to the polymer's radius of gyration, such that the simulation domain is 3 times the radius of the UVC beam. We therefore set the UVC beam radius, $\rho_B$, to be  
     $\rho_B=\rho/3=(b\sqrt{N/6})/6$.
 	
 	\subsection{The region of interest (ROI)}
@@ -73,7 +71,8 @@
 	
 				    
 	\subsection{The chromatin}	
-     The chromatin is modeled as a Rouse polymer of $N$ monomers connected by harmonic springs. The dynamics of the polymer is governed by 3 forces: thermal fluctuations, spring force, and bending force, which we vary during simulations to approximate the observed experimental behavior.
+     The chromatin is modeled as a Rouse polymer of $N$ monomers connected by harmonic springs. The dynamics of the polymer is governed by 3 forces: thermal fluctuations, spring force, and bending force, which we vary during simulations to approximate the observed experimental behavior. Before UVC beam is shot the polymer dynamics is governed by spring forces only, whereas after UVC the affected monomers of the chain along with their nearest neighbors are assigned additional bending elasticity forces. 
+     
      Thermal diffusion fluctuation, results from the random collision of the polymer with the particles of its surrounding, and is given by 
      \begin{equation*}
      F_d(t) = \sqrt{2D}\frac{dw}{dt}
