--- a/Documents/Report/ChromatinArchitecturePostUVCDamage.tex
+++ b/Documents/Report/ChromatinArchitecturePostUVCDamage.tex
@@ -175,16 +175,17 @@
       In the experiments explained below we ran the simulation to see if the radius of expansion of the affected monomers can be limited by the Lennard-Jones fores. Simulations are performed in two-dimensional spherical environment, the polymer includes 500 monomers.
       
       
-     \begin{figure}
+     \begin{figure}[H]
      \includegraphics[width=0.5\linewidth, height=0.3\textheight]{RadiusOfExpansion500BeadsLennardJones}
     	\includegraphics[width=0.5\linewidth, height=0.3\textheight]{RadiusOfExpansion500BeadsNonAffectedLennardJones}
         \caption{Radius of expansion relative to the monomers' center-of-mass, for the affected (left) and non-affected (right) monomers of the chain.(Mean of 5 experiments of 9000 steps each, polymers contain 500 monomers)}
         \label{fig:RadiusOfExpansion500BeadsLennardJones}
       \end{figure}
       
-      From figure \ref{fig:RadiusOfExpansion500BeadsLennardJones} we can see that the Lennard Jones is not sufficient to stop the monomers from expanding. The affected monomers MSD keeps increasing until about time 300 sec, where it reaches a plateau. at this point many beads are at the same line as the non affected ones and probably the expansion comes into a halt. Once the bending force overcomes the resistance by the Lennard Jones force, the expansion continues. The affected beads' radius of expansion doesn't reach the value of the non affected. However, we suspect that it will given enough time. Moreover, the expansion is measured relative to the center of mass of either one of the two groups, affected and non-affected, and so it is not clear where are those two groups relative to each other.
+      From figure \ref{fig:RadiusOfExpansion500BeadsLennardJones} we can see that the Lennard Jones is not sufficient to stop the monomers from expanding. The affected monomers MSD keeps increasing until about time 300 sec, where it reaches a plateau. at this point many beads are at the same line as the non affected ones and probably the expansion comes into a halt. Once the bending force overcomes the resistance by the Lennard Jones force, the expansion continues. The affected beads' radius of expansion doesn't reach the value of the non affected. However, we suspect that it will given enough time. Moreover, the expansion is measured relative to the center of mass of either one of the two groups, affected and non-affected, and so it is not clear where are those two groups relative to each other. 
       
-      To look into the relative position of the two groups, we now measure expansion relative to the center of the beam. 
+      Changing the radius of expansion to be calculated relatively to the beam center does not change the size of expansion. the affected monomers keep on expanding.
+      
       
       
       
